--- a/src/components/WindowConversation/ConversationDetails/ConversationDetails.css
+++ b/src/components/WindowConversation/ConversationDetails/ConversationDetails.css
@@ -75,5 +75,4 @@
 
 .conversations-details-body {
   height: 60%;
-  border: 1px solid yellow;
 }
