--- a/src/components/WindowConversation/WindowConversation.css
+++ b/src/components/WindowConversation/WindowConversation.css
@@ -1,11 +1,10 @@
 .WindowConversation {
-  width: calc(100vw - 21vw + 1px);
+  width: calc(100vw - 21vw);
   height: 100%;
   border-left: 1px solid #e6e6e6;
   display: flex;
   position: relative;
   background-color: white;
-  overflow-x: hidden !important;
 }
 
 .conversation-container {
